# libbpg

./: CMakeLists.txt  README  bpgdec.cpp  bpgenc.cpp  bpgview.cpp  jctvc_glue.cpp  libbpg.h  x265_glue.c
